--- a/template/shop.html
+++ b/template/shop.html
@@ -27,10 +27,7 @@
     />
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-    <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites
-      by Untree.co
-    </title>
+    <title>Sản phẩm</title>
   </head>
 
   <body>
@@ -119,6 +116,7 @@
                 <i class="fa-solid fa-caret-down"></i>
               </button>
             </div>
+
             <div class="category-right-top-item">
               <select name="" id="">
                 <option value="">Sắp xếp</option>
@@ -127,170 +125,170 @@
                 <option value="">Trả góp 0đ</option>
               </select>
             </div>
-          </div>
+            <div class="category-right-content roww">
+              <div
+                class="untree_co-section product-section before-footer-section"
+              >
+                <div class="container">
+                  <div class="row">
+                    <!-- Start Column 1 -->
+                    <div class="col-12 col-md-4 col-lg-3 mb-5">
+                      <a class="product-item" href="#">
+                        <img
+                          src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg"
+                          class="img-fluid product-thumbnail"
+                        />
+                        <h3 class="product-title">
+                          Quạt điều hòa Delites RPD-30 48W
+                        </h3>
+                        <strong class="product-price">1.290.000 VNĐ </strong>
 
-          <!-- Nội Dung Phần Phải -->
-          <div class="category-right-content roww">
-            <div
-              class="untree_co-section product-section before-footer-section"
-            >
-              <div class="container">
-                <div class="row">
-                  <!-- Start Column 1 -->
-                  <div class="col-12 col-md-4 col-lg-3 mb-5">
-                    <a class="product-item" href="#">
-                      <img
-                        src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg"
-                        class="img-fluid product-thumbnail"
-                      />
-                      <h3 class="product-title">
-                        Quạt điều hòa Delites RPD-30 48W
-                      </h3>
-                      <strong class="product-price">1.290.000 VNĐ </strong>
+                        <span class="icon-cross">
+                          <img src="images/cross.svg" class="img-fluid" />
+                        </span>
+                      </a>
+                    </div>
+                    <!-- End Column 1 -->
 
-                      <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid" />
-                      </span>
-                    </a>
+                    <!-- Start Column 2 -->
+                    <div class="col-12 col-md-4 col-lg-3 mb-5">
+                      <a class="product-item" href="#">
+                        <img
+                          src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg"
+                          class="img-fluid product-thumbnail"
+                        />
+                        <h3 class="product-title">
+                          Quạt điều hoà Daikiosan DM102 110W
+                        </h3>
+                        <strong class="product-price">2.590.000 VNĐ</strong>
+
+                        <span class="icon-cross">
+                          <img src="images/cross.svg" class="img-fluid" />
+                        </span>
+                      </a>
+                    </div>
+                    <!-- End Column 2 -->
+
+                    <!-- Start Column 3 -->
+                    <div class="col-12 col-md-4 col-lg-3 mb-5">
+                      <a class="product-item" href="#">
+                        <img
+                          src="https://cdn.tgdd.vn/Products/Images/7498/320997/quat-dieu-hoa-daikiosan-dm103-0-700x467.jpg"
+                          class="img-fluid product-thumbnail"
+                        />
+                        <h3 class="product-title">
+                          Quạt điều hoà Daikiosan DM103 175W
+                        </h3>
+                        <strong class="product-price">3.490.000 VNĐ</strong>
+
+                        <span class="icon-cross">
+                          <img src="images/cross.svg" class="img-fluid" />
+                        </span>
+                      </a>
+                    </div>
+                    <!-- End Column 3 -->
+
+                    <!-- Start Column 4 -->
+                    <div class="col-12 col-md-4 col-lg-3 mb-5">
+                      <a class="product-item" href="#">
+                        <img
+                          src="https://cdn.tgdd.vn/Products/Images/7498/324895/quat-dieu-hoa-daikiosan-dm201-1-700x467.jpg"
+                          class="img-fluid product-thumbnail"
+                        />
+                        <h3 class="product-title">
+                          Quạt điều hoà Daikiosan DM201 180W
+                        </h3>
+                        <strong class="product-price">3.90.000 VNĐ</strong>
+
+                        <span class="icon-cross">
+                          <img src="images/cross.svg" class="img-fluid" />
+                        </span>
+                      </a>
+                    </div>
+                    <!-- End Column 4 -->
+
+                    <!-- Start Column 1 -->
+                    <div class="col-12 col-md-4 col-lg-3 mb-5">
+                      <a class="product-item" href="#">
+                        <img
+                          src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg"
+                          class="img-fluid product-thumbnail"
+                        />
+                        <h3 class="product-title">
+                          Quạt điều hoà Delites RPD-30 48W
+                        </h3>
+                        <strong class="product-price">1.290.000</strong>
+
+                        <span class="icon-cross">
+                          <img src="images/cross.svg" class="img-fluid" />
+                        </span>
+                      </a>
+                    </div>
+                    <!-- End Column 1 -->
+
+                    <!-- Start Column 2 -->
+                    <div class="col-12 col-md-4 col-lg-3 mb-5">
+                      <a class="product-item" href="#">
+                        <img
+                          src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg"
+                          class="img-fluid product-thumbnail"
+                        />
+                        <h3 class="product-title">
+                          Quạt điều hoà Daikiosan DM102 110W
+                        </h3>
+                        <strong class="product-price">2.590.000</strong>
+
+                        <span class="icon-cross">
+                          <img src="images/cross.svg" class="img-fluid" />
+                        </span>
+                      </a>
+                    </div>
+                    <!-- End Column 2 -->
+
+                    <!-- Start Column 3 -->
+                    <div class="col-12 col-md-4 col-lg-3 mb-5">
+                      <a class="product-item" href="#">
+                        <img
+                          src="https://cdn.tgdd.vn/Products/Images/7498/320998/quat-dieu-hoa-daikiosan-dm104-1-700x467.jpg"
+                          class="img-fluid product-thumbnail"
+                        />
+                        <h3 class="product-title">
+                          Quạt điều hoà Daikiosan DM104 300W
+                        </h3>
+                        <strong class="product-price">6.450.000 VNĐ</strong>
+
+                        <span class="icon-cross">
+                          <img src="images/cross.svg" class="img-fluid" />
+                        </span>
+                      </a>
+                    </div>
+                    <!-- End Column 3 -->
+
+                    <!-- Start Column 4 -->
+                    <div class="col-12 col-md-4 col-lg-3 mb-5">
+                      <a class="product-item" href="#">
+                        <img
+                          src="https://cdn.tgdd.vn/Products/Images/7498/321770/quat-dieu-hoa-kangaroo-kg50f99-1-700x467.jpg"
+                          class="img-fluid product-thumbnail"
+                        />
+                        <h3 class="product-title">
+                          Quạt điều hoà Kangaroo KG50F99 165W
+                        </h3>
+                        <strong class="product-price">3.590.000 VNĐ</strong>
+
+                        <span class="icon-cross">
+                          <img src="images/cross.svg" class="img-fluid" />
+                        </span>
+                      </a>
+                    </div>
+                    <!-- End Column 4 -->
                   </div>
-                  <!-- End Column 1 -->
-
-                  <!-- Start Column 2 -->
-                  <div class="col-12 col-md-4 col-lg-3 mb-5">
-                    <a class="product-item" href="#">
-                      <img
-                        src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg"
-                        class="img-fluid product-thumbnail"
-                      />
-                      <h3 class="product-title">
-                        Quạt điều hoà Daikiosan DM102 110W
-                      </h3>
-                      <strong class="product-price">2.590.000 VNĐ</strong>
-
-                      <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid" />
-                      </span>
-                    </a>
-                  </div>
-                  <!-- End Column 2 -->
-
-                  <!-- Start Column 3 -->
-                  <div class="col-12 col-md-4 col-lg-3 mb-5">
-                    <a class="product-item" href="#">
-                      <img
-                        src="https://cdn.tgdd.vn/Products/Images/7498/320997/quat-dieu-hoa-daikiosan-dm103-0-700x467.jpg"
-                        class="img-fluid product-thumbnail"
-                      />
-                      <h3 class="product-title">
-                        Quạt điều hoà Daikiosan DM103 175W
-                      </h3>
-                      <strong class="product-price">3.490.000 VNĐ</strong>
-
-                      <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid" />
-                      </span>
-                    </a>
-                  </div>
-                  <!-- End Column 3 -->
-
-                  <!-- Start Column 4 -->
-                  <div class="col-12 col-md-4 col-lg-3 mb-5">
-                    <a class="product-item" href="#">
-                      <img
-                        src="https://cdn.tgdd.vn/Products/Images/7498/324895/quat-dieu-hoa-daikiosan-dm201-1-700x467.jpg"
-                        class="img-fluid product-thumbnail"
-                      />
-                      <h3 class="product-title">
-                        Quạt điều hoà Daikiosan DM201 180W
-                      </h3>
-                      <strong class="product-price">3.90.000 VNĐ</strong>
-
-                      <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid" />
-                      </span>
-                    </a>
-                  </div>
-                  <!-- End Column 4 -->
-
-                  <!-- Start Column 1 -->
-                  <div class="col-12 col-md-4 col-lg-3 mb-5">
-                    <a class="product-item" href="#">
-                      <img
-                        src="https://cdn.tgdd.vn/Products/Images/7498/319779/quat-dieu-hoa-delites-rpd-30-1-700x467.jpg"
-                        class="img-fluid product-thumbnail"
-                      />
-                      <h3 class="product-title">
-                        Quạt điều hoà Delites RPD-30 48W
-                      </h3>
-                      <strong class="product-price">1.290.000</strong>
-
-                      <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid" />
-                      </span>
-                    </a>
-                  </div>
-                  <!-- End Column 1 -->
-
-                  <!-- Start Column 2 -->
-                  <div class="col-12 col-md-4 col-lg-3 mb-5">
-                    <a class="product-item" href="#">
-                      <img
-                        src="https://cdn.tgdd.vn/Products/Images/7498/320996/quat-dieu-hoa-daikiosan-dm102-1-700x467.jpg"
-                        class="img-fluid product-thumbnail"
-                      />
-                      <h3 class="product-title">
-                        Quạt điều hoà Daikiosan DM102 110W
-                      </h3>
-                      <strong class="product-price">2.590.000</strong>
-
-                      <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid" />
-                      </span>
-                    </a>
-                  </div>
-                  <!-- End Column 2 -->
-
-                  <!-- Start Column 3 -->
-                  <div class="col-12 col-md-4 col-lg-3 mb-5">
-                    <a class="product-item" href="#">
-                      <img
-                        src="https://cdn.tgdd.vn/Products/Images/7498/320998/quat-dieu-hoa-daikiosan-dm104-1-700x467.jpg"
-                        class="img-fluid product-thumbnail"
-                      />
-                      <h3 class="product-title">
-                        Quạt điều hoà Daikiosan DM104 300W
-                      </h3>
-                      <strong class="product-price">6.450.000 VNĐ</strong>
-
-                      <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid" />
-                      </span>
-                    </a>
-                  </div>
-                  <!-- End Column 3 -->
-
-                  <!-- Start Column 4 -->
-                  <div class="col-12 col-md-4 col-lg-3 mb-5">
-                    <a class="product-item" href="#">
-                      <img
-                        src="https://cdn.tgdd.vn/Products/Images/7498/321770/quat-dieu-hoa-kangaroo-kg50f99-1-700x467.jpg"
-                        class="img-fluid product-thumbnail"
-                      />
-                      <h3 class="product-title">
-                        Quạt điều hoà Kangaroo KG50F99 165W
-                      </h3>
-                      <strong class="product-price">3.590.000 VNĐ</strong>
-
-                      <span class="icon-cross">
-                        <img src="images/cross.svg" class="img-fluid" />
-                      </span>
-                    </a>
-                  </div>
-                  <!-- End Column 4 -->
                 </div>
               </div>
             </div>
           </div>
+
+          <!-- Nội Dung Phần Phải -->
         </div>
 
         <!-- Thanh Dưới -->
